--- a/src/app/rating/rating.component.html
+++ b/src/app/rating/rating.component.html
@@ -1,18 +1,71 @@
 <h2><b>Rating</b>Component</h2>
 
 <div class="jumbotron">
-  <p>Ratings of the project:</p>
-    <ul>
-      <li><a href="https://github.com/UdL-EPS-SoftArch/UniCloud-API" target="_blank">Spring Back-End</a></li>
-      <li><a href="https://github.com/UdL-EPS-SoftArch/UniCloud" target="_blank">Angular Front-End</a></li>
-    </ul>
+	<p>Ratings of the project:</p>
+		<ul>
+			<li><a href="https://github.com/UdL-EPS-SoftArch/UniCloud-API" target="_blank">Spring Back-End</a></li>
+			<li><a href="https://github.com/UdL-EPS-SoftArch/UniCloud" target="_blank">Angular Front-End</a></li>
+		</ul>
 </div>
+
+
+<div class="container">
+		<h1>Create Rating</h1>
+		<table width="100%">
+				<tr><td width="77%">
+				<div class="">
+					<form class="form-horizontal" action="send.php" method="post">
+					<fieldset>
+						<br>
+						<!-- Name input-->
+						<div class="form-group">
+							<label class="col-md-3 control-label" for="name">Name</label>
+							<div class="col-md-9">
+								<input id="name" name="name" type="text" placeholder="Your name" class="form-control">
+							</div>
+						</div>
+						
+						<br>
+						<!-- Message body -->
+						<div class="form-group">
+							<label class="col-md-3 control-label" for="message">Comment</label>
+							<div class="col-md-9">
+								<textarea class="form-control" id="message" name="message" placeholder="Please enter your feedback here..." rows="5"></textarea>
+							</div>
+						</div>
+
+						<br>
+						<!-- Rating -->
+						<div class="form-group">
+							<label class="col-md-3 control-label" for="message">Your rating</label>
+							<div class="col-md-9">
+								<input id="input-21e" value="0" type="number" class="rating" min=0 max=5 step=0.5 data-size="xs" >
+							</div>
+						</div>
+					</fieldset>
+				</form>
+		</div>	
+		</td>
+		</tr>
+	</table>
+</div>
+<br>
+<div class="form-group">
+	<div class="col-md-12">
+		<button type="submit" class="btn btn-primary btn-md">Submit</button>
+		<button type="reset" class="btn btn-default btn-md">Clear</button>
+	</div>
+</div>
+
+
+
+
 
 <!--Footer-->
 <footer class="modal-footer">
-  <div class="container">
-    <div class="text-center">
-      <small>Footer...</small>
-    </div>
-  </div>
+	<div class="container">
+		<div class="text-center">
+			<small>Footer...</small>
+		</div>
+	</div>
 </footer>
