--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Role</h6>
-        <p class="card-text">{{user.getRoles().join(', ')}}</p>
+        <!--<p class="card-text">{{user.getRoles().join(', ')}}</p>-->
       </div>
     </div>
     <div class="card-footer text-right">
