--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -7,11 +7,11 @@
       <input id="username" name="username" type="text" class="form-control" readonly [ngModel]="user.id">
     </div>
 
-    <!-- Role read only -->
+    <!-- Role read only
     <div *ngIf="user.getRoles().length > 0" class="form-group mb-3">
       <label class="control-label" for="role">Role</label>
       <input id="role" name="role" type="text" class="form-control" readonly [ngModel]="user.getRoles().join(', ')">
-    </div>
+    </div>-->
 
     <!-- E-Mail input -->
     <div class="form-group mb-3" [class.was-validated]="email.dirty || email.touched">
