--- a/src/app/rating/rating-create/rating-create.component.html
+++ b/src/app/rating/rating-create/rating-create.component.html
@@ -1,57 +1,41 @@
 <h1><b>Rating Component</b></h1>
 
-<div class="container">
-		<h2>Create Rating</h2>
-		<table width="100%">
-				<tr><td width="77%">
-				<div class="">
-					<form class="form-horizontal" action="send.php" method="post">
-					<fieldset>
-						<br>
-						<!-- Name input-->
-						<div class="form-group">
-							<label class="col-md-3 control-label" for="name">Name</label>
-							<div class="col-md-9">
-								<input id="name" name="name" type="text" placeholder="Your name" class="form-control">
-							</div>
-						</div>
-						
-						<br>
-						<!-- Message body -->
-						<div class="form-group">
-							<label class="col-md-3 control-label" for="message">Comment</label>
-							<div class="col-md-9">
-								<textarea class="form-control" id="message" name="message" placeholder="Please enter your feedback here..." rows="5"></textarea>
-							</div>
-						</div>
+<form id="user-form" (ngSubmit)="onSubmit()" #form="ngForm">
+	<fieldset>
+  
+	  <!-- Username input -->
+	  <div class="form-group mb-3">
+		<label class="control-label" for="name">Name*</label>
+		<input id="username" name="name" type="text" class="form-control" required>
+		<div class="invalid-feedback">A name is required</div>
+	  </div>
+  
+	  <!-- E-Mail input -->
+	  <div class="form-group mb-3">
+		<label class="control-label" for="comment">Comment*</label>
+		<input id="comment" name="comment" type="comment" class="form-control" required email>
+		<div class="invalid-feedback">A comment is required</div>
+	  </div>
+  
+	  <!-- Password input -->
+	  <div class="form-group mb-3">
+		<label class="control-label" for="message">Your rating</label>
+		<input id="input-21e" value="0" type="number" class="rating" min=0 max=5 step=0.5 data-size="xs" >
+		<div class="invalid-feedback">You must set a rating</div>
+	  </div>
 
-						<br>
-						<!-- Rating -->
-						<div class="form-group">
-							<label class="col-md-3 control-label" for="message">Your rating</label>
-							<div class="col-md-9">
-								<input id="input-21e" value="0" type="number" class="rating" min=0 max=5 step=0.5 data-size="xs" >
-							</div>
-						</div>
-					</fieldset>
-				</form>
-		</div>	
-		</td>
-		</tr>
-	</table>
-</div>
-<br>
-<div class="form-group">
-	<div class="col-md-12">
-		<button type="submit" id="Click" onclick="getRating()" class="btn btn-primary btn-md">Submit</button>
-		<button type="reset" class="btn btn-default btn-md">Clear</button>
-	</div>
-</div>
-
-
-
-
-
+  
+	  <!-- Button -->
+	  <div class="form-group fa-pull-right">
+		<button id="listBtn" type="button" (click)="onCancel()"
+				class="btn btn-outline-primary pull-right">Back</button>
+		<button id="submit" type="submit" [disabled]="!form.form.valid"
+				class="btn ms-3 btn-success pull-right">Submit</button>
+	  </div>
+  
+	</fieldset>
+  </form>
+  
 <!--Footer-->
 <footer class="modal-footer">
 	<div class="container">
