--- a/src/app/university/university-search/university-search.component.html
+++ b/src/app/university/university-search/university-search.component.html
@@ -1,1 +1,3 @@
-<p>university-search works!</p>
+<div class="col form-group">
+  <input type="text" class="form-control" (keyup) = "write($event.target)"/>
+</div>
