University CRUD completed

--- a/src/app/university/university-create/university-create.component.html
+++ b/src/app/university/university-create/university-create.component.html
@@ -1,1 +1,42 @@
-<p>university-create works!</p>
+
+<form id="user-form" (ngSubmit)="onSubmit()" #form="ngForm">
+  <fieldset>
+
+    <!-- Name input -->
+    <div class="form-group mb-3" >
+      <label class="control-label" for="name">University Name*</label>
+      <input id="name" name="name" type="text" class="form-control" required [(ngModel)]="university.name" #name="ngModel">
+      <div class="invalid-feedback">An university name is required</div>
+    </div>
+
+    <!-- Acronym input -->
+    <div class="form-group mb-3">
+      <label class="control-label" for="acronym">Acronym*</label>
+      <input id="acronym" name="acronym" type="text" class="form-control" required [(ngModel)]="university.acronym" #acronym="ngModel">
+      <div class="invalid-feedback">An acronym is required</div>
+    </div>
+
+    <!-- City input -->
+    <div class="form-group mb-3">
+      <label class="control-label" for="city">City*</label>
+      <input id="city" name="city" type="text" class="form-control" required [(ngModel)]="university.city" #city="ngModel">
+      <div class="invalid-feedback">A city is required</div>
+    </div>
+
+    <!-- Country input -->
+    <div class="form-group mb-3">
+      <label class="control-label" for="country">Country*</label>
+      <input id="country" name="country" type="text" class="form-control" required [(ngModel)]="university.country" #country="ngModel">
+      <div class="invalid-feedback">An country name is required</div>
+    </div>
+
+    <!-- Button -->
+    <div class="form-group fa-pull-right">
+      <button id="listBtn" type="button" (click)="onCancel()"
+              class="btn btn-outline-primary pull-right">Back</button>
+      <button id="submit" type="submit" [disabled]="!form.form.valid"
+              class="btn ms-3 btn-success pull-right">Submit</button>
+    </div>
+
+  </fieldset>
+</form>
