--- a/src/app/university/university-list/university-list.component.html
+++ b/src/app/university/university-list/university-list.component.html
@@ -21,6 +21,11 @@
     </div>
   </div>
 </div>
+<div class="card-footer text-right" *ngIf="isRole('admin')" >
+  <button id="createBtn" type="button" [routerLink]="['create']"
+          class="btn m-1 btn-outline-primary">Create University
+  </button>
+</div>
 
 <ngb-pagination class="d-flex justify-content-center"
                 [(page)]="page" [pageSize]="pageSize" [collectionSize]="totalUniversities"
