--- a/src/app/university/university-detail/university-detail.component.html
+++ b/src/app/university/university-detail/university-detail.component.html
@@ -23,10 +23,10 @@
       <button id="listBtn" type="button" [routerLink]="['/universities']"
               class="btn m-1 btn-outline-primary">University List
       </button>
-      <button id="editBtn" type="button" [routerLink]="['edit']"
+      <button id="editBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
               class="btn m-1 btn-outline-success">Edit
       </button>
-      <button id="deleteBtn" type="button" [routerLink]="['delete']"
+      <button id="deleteBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['delete']"
               class="btn m-1 btn-outline-danger">Delete
       </button>
     </div>
