--- a/src/app/admin/admin-delete/admin-delete.component.html
+++ b/src/app/admin/admin-delete/admin-delete.component.html
@@ -1,1 +1,13 @@
-<p>admin-delete works!</p>
+<div class="panel panel-warning">
+  <div class="panel-heading">
+    <div class="panel-title">Please, confirm deletion:</div>
+  </div>
+  <div class="panel-body">
+    <div class="text-center">
+      <button id="deleteBttn" type="button" (click)="delete()"
+              class="btn btn-outline-danger m-1">Delete</button>
+      <button id="listBttn" type="button" [routerLink]="['/admin', admin.id]"
+              class="btn-outline-primary m-1">Cancel</button>
+    </div>
+  </div>
+</div>
