Advanced degree-list-> linked universities

--- a/src/app/degree/degree-list/degree-list.component.html
+++ b/src/app/degree/degree-list/degree-list.component.html
@@ -12,8 +12,7 @@
       </div>
       <div class="col">
         <h6 class="card-subtitle text-muted">University</h6>
-        <p class="card-text">{{degree.faculty}}</p>
-        <!--<a class="card-text" [routerLink]="['../universities', degree.university.id]">{{degree.name}}</a>-->
+        <a class="card-text" [routerLink]="['../universities', degree.university.getSelfLinkHref().split('/')[4]]">{{degree.university.name}}</a>
       </div>
     </div>
   </div>
