--- a/src/app/subject/subject-create/subject-create.component.html
+++ b/src/app/subject/subject-create/subject-create.component.html
@@ -1,1 +1,34 @@
-<p>subject-create works!</p>
+<form id="user-form" (ngSubmit)="onSubmit()" #form="ngForm">
+  <fieldset>
+
+    <!-- Name Input -->
+    <div class="form-group mb-3" >
+      <label class="control-label" for="name">Subject Name*</label>
+      <input id="name" name="name" type="text" class="form-control" required [(ngModel)]="subject.name" #name="ngModel">
+      <div class="invalid-feedback">A subject name is required </div>
+    </div>
+
+    <!-- Course Input -->
+    <div class="form-group mb-3" >
+      <label class="control-label" for="course">Subject Course*</label>
+      <input id="course" name="course" type="number" class="form-control" required [(ngModel)]="subject.course" #course="ngModel">
+      <div class="invalid-feedback">A subject course is required</div>
+    </div>
+
+    <!-- Optional Input -->
+    <div class="form-group mb-3" >
+      <label class="control-label" for="optional">Subject Optional*</label>
+      <input id="optional" name="optional" type="text" class="form-control" required [(ngModel)]="subject.optional" #optional="ngModel">
+      <div class="invalid-feedback">A subject optional is required</div>
+    </div>
+
+    <!-- Button -->
+    <div class="form-group fa-pull-right" >
+      <button id="listBtn" type="button" (click)="onCancel()"
+              class="btn btn-outline-primary pull-right">Back</button>
+      <button id="submit" type="submit" [disabled]="!form.form.valid"
+              class="btn ms-3 btn-success pull-right">Submit</button>
+    </div>
+
+  </fieldset>
+</form>
