--- a/src/app/subject/subject-detail/subject-detail.component.html
+++ b/src/app/subject/subject-detail/subject-detail.component.html
@@ -1,1 +1,27 @@
-<p>subject-detail works!</p>
+<div class="card mb-4">
+  <div class="card-block">
+    <h4 class="card-title col-md-12 p-3">{{subject.name}}</h4>
+    <div class="card-body row m-1">
+      <div class="col-md-4 p-3">
+        <h6 class="card-subtitle text-muted">Course</h6>
+        <p class="card-text">{{subject.course}}</p>
+      </div>
+      <div class="col-md-4 p-3">
+        <h6 class="card-subtitle text-muted">Optional</h6>
+        <p class="card-text">{{subject.optional}}</p>
+      </div>
+      <div class="col-md-4 p-3">
+        <h6 class="card-subtitle text-muted">Name</h6>
+        <p class="card-text">{{subject.name}}</p>
+      </div>
+    </div>
+    <div class="card-footer text-right">
+      <button id="listBtn" type="button" [routerLink]="['subjects']"
+              class="btn m-1 btn-outline-primary">Subject List</button>
+      <button id="editBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
+              class="btn m-1 btn-outline-success">Edit</button>
+      <button id="deleteBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['delete']"
+              class="btn m-1 btn-outline-danger">Delete</button>
+    </div>
+  </div>
+</div>
