--- a/src/app/subject/subject-edit/subject-edit.component.html
+++ b/src/app/subject/subject-edit/subject-edit.component.html
@@ -1,1 +1,34 @@
-<p>subject-edit works!</p>
+<form id="subject-form" (ngSubmit)="onSubmit()" #form="ngForm">
+  <fieldset>
+
+    <!--Name input -->
+    <div class="form-group mb-3">
+      <label class="control-label" for="name">Subject Name*</label>
+      <input id="name" name="name" type="text" class="form-control" required [(ngModel)]="subject.name">
+      <div class="invalid-feedback">A subject name is required</div>
+    </div>
+
+    <!--Course input -->
+    <div class="form-group mb-3">
+      <label class="control-label" for="course">Subject Course*</label>
+      <input id="course" name="course" type="number" class="form-control" required [(ngModel)]="subject.course">
+      <div class="invalid-feedback">A subject course is required</div>
+    </div>
+
+    <!--Optional input -->
+    <div class="form-group mb-3">
+      <label class="control-label" for="name">Subject Optional*</label>
+      <input id="optional" name="optional" type="text" class="form-control" required [(ngModel)]="subject.optional">
+      <div class="invalid-feedback">A subject optional is required</div>
+    </div>
+
+    <!-- Button -->
+    <div class="form-group fa-pull-right" >
+      <button id="userDetail" type="button" [routerLink]="['/subjects/'+getCurrentSubjectID()]"
+              class="btn btn-outline-primary pull-right">Back</button>
+      <button id="submit" type="submit" [disabled]="!form.form.valid"
+              class="btn btn-success ms-3 ">Submit</button>
+    </div>
+
+  </fieldset>
+</form>
