Added basic create university test and added wait after user log in

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,15 +15,15 @@
            aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>Users</a>
         <div class="dropdown-menu" aria-labelledby="playDropdown" ngbDropdownMenu>
           <a class="dropdown-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{ exact: true }"
-             [routerLink]="['/users']"><span class="fas fa-user-circle"></span> List</a>
+             [routerLink]="['/users']"><span class="fas fa-user-circle"></span> List Users</a>
         </div>
       </li>
       <li class="nav-item" ngbDropdown>
-        <a class="nav-link dropdown-toggle" id="universityDropdown" role="button"
+        <a class="nav-link dropdown-toggle" role="button"
            aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>Universities</a>
         <div class="dropdown-menu" aria-labelledby="playDropdown" ngbDropdownMenu>
           <a class="dropdown-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{ exact: true }"
-             [routerLink]="['/universities']"><span class="fas fa-user-circle"></span> List</a>
+             [routerLink]="['/universities']"><span class="fas fa-user-circle"></span> List Universities</a>
         </div>
       </li>
     </ul>
