--- a/src/app/university/university-detail/university-detail.component.html
+++ b/src/app/university/university-detail/university-detail.component.html
@@ -1,22 +1,22 @@
 <div class="card mb-4">
   <div class="card-block">
-    <h4 class="card-title col-md-12 p-3">{{university.name}}</h4>
+    <h4 id="universityTitleName" class="card-title col-md-12 p-3">{{university.name}}</h4>
     <div class="card-body row m-1">
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Acronym</h6>
-        <p class="card-text">{{university.acronym}}</p>
+        <p id="universityAcronym" class="card-text">{{university.acronym}}</p>
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">City</h6>
-        <p class="card-text">{{university.city}}</p>
+        <p id="universityCity" class="card-text">{{university.city}}</p>
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Country</h6>
-        <p class="card-text">{{university.country}}</p>
+        <p id="universityCountry" class="card-text">{{university.country}}</p>
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Name</h6>
-        <p class="card-text">{{university.name}}</p>
+        <p id="universityName" class="card-text">{{university.name}}</p>
       </div>
     </div>
     <div class="card-footer text-right">
