--- a/src/app/resource/resource-create/resource-create.component.html
+++ b/src/app/resource/resource-create/resource-create.component.html
@@ -1,1 +1,38 @@
-<p>resource-create works!</p>
+<form id="user-form" (ngSubmit)="onSubmit()" #form="ngForm">
+  <fieldset>
+
+    <!-- Name input -->
+    <div class="form-group mb-3" >
+      <label class="control-label" for="name">Resource Name*</label>
+      <input id="name" name="name" type="text" class="form-control" required [(ngModel)]="resource.name" #name="ngModel">
+      <div class="invalid-feedback">A resource name is required</div>
+    </div>
+
+    <!-- Description input -->
+    <div class="form-group mb-3">
+      <label class="control-label" for="acronym">Description*</label>
+      <input id="acronym" name="acronym" type="text" class="form-control" required [(ngModel)]="resource.description" #acronym="ngModel">
+    </div>
+
+    <!-- File input -->
+
+
+    <!-- Resource type input -->
+
+
+    <!-- Student input -->
+
+
+    <!-- Subjects input -->
+
+
+    <!-- Button -->
+    <div class="form-group fa-pull-right">
+      <button id="listBtn" type="button" (click)="onCancel()"
+              class="btn btn-outline-primary pull-right">Back</button>
+      <button id="submit" type="submit" [disabled]="!form.form.valid"
+              class="btn ms-3 btn-success pull-right">Submit</button>
+    </div>
+
+  </fieldset>
+</form>
