--- a/src/app/resource/resource-detail/resource-detail.component.html
+++ b/src/app/resource/resource-detail/resource-detail.component.html
@@ -1,1 +1,23 @@
-<p>resource-detail works!</p>
+<div class="card mb-4">
+  <div class="card-block">
+    <h4 class="card-title col-md-12 p-3">{{resource.name}}</h4>
+    <div class="card-body row m-1">
+      <div class="col-md-4 p-3">
+        <h6 class="card-subtitle text-muted">Description</h6>
+        <p class="card-text">{{resource.description}}</p>
+      </div>
+      <!-- Rest of attributes-->
+    </div>
+    <div class="card-footer text-right">
+      <button id="listBtn" type="button" [routerLink]="['/resources']"
+              class="btn m-1 btn-outline-primary">Resources List
+      </button>
+      <button id="editBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
+              class="btn m-1 btn-outline-success">Edit
+      </button>
+      <button id="deleteBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['delete']"
+              class="btn m-1 btn-outline-danger">Delete
+      </button>
+    </div>
+  </div>
+</div>
