--- a/src/app/university/university-search/university-search.component.html
+++ b/src/app/university/university-search/university-search.component.html
@@ -1,3 +1,3 @@
 <div class="col form-group">
-  <input type="text" class="form-control" (keyup) = "write($event.target)"/>
+  <input placeholder="Search for any university.." type="text" class="form-control" (keyup) = "write($event.target)"/>
 </div>
