--- a/src/app/resource/resource-create/resource-create.component.html
+++ b/src/app/resource/resource-create/resource-create.component.html
@@ -1,4 +1,4 @@
-<form id="user-form" (ngSubmit)="onSubmit()" #form="ngForm">
+<form id="resource-create-form" (ngSubmit)="onSubmit()" #form="ngForm">
   <fieldset>
 
     <!-- Name input -->
@@ -10,8 +10,8 @@
 
     <!-- Description input -->
     <div class="form-group mb-3">
-      <label class="control-label" for="acronym">Description*</label>
-      <input id="acronym" name="acronym" type="text" class="form-control" required [(ngModel)]="resource.description" #acronym="ngModel">
+      <label class="control-label" for="description">Description*</label>
+      <input id="description" name="description" type="text" class="form-control" required [(ngModel)]="resource.description" #acronym="ngModel">
     </div>
 
     <!-- File input -->
