--- a/src/app/resource/resource-edit/resource-edit.component.html
+++ b/src/app/resource/resource-edit/resource-edit.component.html
@@ -27,7 +27,7 @@
 
     <!-- Button -->
     <div class="form-group fa-pull-right">
-      <button id="resourceDetail" type="button" [routerLink]="['/universities/'+ getCurrentResourceId()]"
+      <button id="resourceDetail" type="button" [routerLink]="['/resources/'+ getCurrentResourceId()]"
               class="btn btn-outline-primary">Back</button>
       <button id="submit" type="submit" [disabled]="!form.form.valid"
               class="btn btn-success ms-3">Submit</button>
