--- a/src/app/resource/resource-search/resource-search.component.html
+++ b/src/app/resource/resource-search/resource-search.component.html
@@ -1,1 +1,3 @@
-<p>resource-search works!</p>
+<div class="col form-group">
+  <input type="text" class="form-control" (keyup) = "write($event.target)"/>
+</div>
