Advanced degree-create -> To do field university

--- a/src/app/degree/degree-create/degree-create.component.html
+++ b/src/app/degree/degree-create/degree-create.component.html
@@ -1,1 +1,34 @@
-<p>degree-create works!</p>
+<form id="degree-form" (ngSubmit)="onSubmit()" #form="ngForm">
+  <fieldset>
+
+    <!-- Name input -->
+    <div class="form-group mb-3" >
+      <label class="control-label" for="name">Degree Name*</label>
+      <input id="name" name="name" type="text" class="form-control" required [(ngModel)]="degree.name" #name="ngModel">
+      <div class="invalid-feedback">A degree name is required</div>
+    </div>
+
+    <!-- Faculty input -->
+    <div class="form-group mb-3">
+      <label class="control-label" for="faculty">Faculty*</label>
+      <input id="faculty" name="faculty" type="text" class="form-control" required [(ngModel)]="degree.faculty" #faculty="ngModel">
+      <div class="invalid-feedback">A faculty is required</div>
+    </div>
+
+    <!-- University input -->
+    <div class="form-group mb-3">
+      <label class="control-label" for="university">University Name*</label>
+      <input id="university" name="university" type="university" class="form-control" required [(ngModel)]="degree.university" #university="ngModel">
+      <div class="invalid-feedback">A university is required</div>
+    </div>
+
+    <!-- Buttons -->
+    <div class="form-group fa-pull-right">
+      <button id="listBtn" type="button" (click)="onCancel()"
+              class="btn btn-outline-primary pull-right">Back</button>
+      <button id="submit" type="submit" [disabled]="!form.form.valid"
+              class="btn ms-3 btn-success pull-right">Submit</button>
+    </div>
+
+  </fieldset>
+</form>
