Fixed some minor details of the testing and added a waiting step to ensure that the tests follow the established order.

--- a/src/app/university/university-create/university-create.component.html
+++ b/src/app/university/university-create/university-create.component.html
@@ -1,5 +1,5 @@
 
-<form id="user-form" (ngSubmit)="onSubmit()" #form="ngForm">
+<form id="university-form" (ngSubmit)="onSubmit()" #form="ngForm">
   <fieldset>
 
     <!-- Name input -->
