--- a/src/app/subject/subject-create/subject-create.component.html
+++ b/src/app/subject/subject-create/subject-create.component.html
@@ -1,4 +1,4 @@
-<form id="user-form" (ngSubmit)="onSubmit()" #form="ngForm">
+<form id="subject-form" (ngSubmit)="onSubmit()" #form="ngForm">
   <fieldset>
 
     <!-- Name Input -->
