Fixed compilation errors

--- a/src/app/admin/admin-list/admin-list.component.html
+++ b/src/app/admin/admin-list/admin-list.component.html
@@ -16,4 +16,4 @@
 </div>
 
 <ngb-pagination class="d-flex justify-content-center"
-                [(page)]="page" [pageSize]="pageSize" [collectionSize]="totalAdmin"></ngb-pagination>
+                [(page)]="page" [pageSize]="pageSize" [collectionSize]="totalAdmins"></ngb-pagination>
