--- a/src/app/login-basic/login-navbar.component.html
+++ b/src/app/login-basic/login-navbar.component.html
@@ -1,4 +1,4 @@
-<li class="nav-item" *ngIf="isLoggedIn()"></li>
+<li class="nav-item" *ngIf="isLoggedIn()">
   <a class="nav-link" href="#" (click)="logout($event)">
     <span class="fas fa-sign-out-alt"></span> Logout</a>
 </li>
