Degree list in University detail

--- a/src/app/university/university-detail/university-detail.component.html
+++ b/src/app/university/university-detail/university-detail.component.html
@@ -30,5 +30,7 @@
               class="btn m-1 btn-outline-danger">Delete
       </button>
     </div>
+    <h6 class="card-title col-md-12 p-3"> {{university.name}} Degrees</h6>
+    <app-degree-list></app-degree-list>
   </div>
 </div>
