Use the same id #currentUser both for admins and students

--- a/src/app/login-basic/login-navbar.component.html
+++ b/src/app/login-basic/login-navbar.component.html
@@ -3,12 +3,9 @@
     <span class="fas fa-sign-out-alt"></span> Logout</a>
 </li>
 
-<li class="nav-item" *ngIf="isLoggedIn()" id="currentAdmin">
+<li class="nav-item" *ngIf="isLoggedIn()" id="currentUser">
   <a class="nav-link" *ngIf="isRole('admin')" [routerLink]="['/admin', getCurrentUser().id]">
     <span class="fas fa-user-circle"></span> {{getCurrentUser().id}}</a>
-</li>
-
-<li class="nav-item" *ngIf="isLoggedIn()" id="currentStudent">
   <a class="nav-link" *ngIf="isRole('student')" [routerLink]="['/student', getCurrentUser().id]">
     <span class="fas fa-user-circle"></span> {{getCurrentUser().id}}</a>
 </li>
