--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
              [routerLink]="['/universities']"><span class="fas fa-user-circle"></span> List Universities</a>
         </div>
       </li>
-      <li class="nav-item" *ngIf="isRole('admin')" ngbDropdown>
+      <li class="nav-item" ngbDropdown>
         <a class="nav-link dropdown-toggle" role="button"
            aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>Subjects</a>
         <div class="dropdown-menu" aria-labelledby="playDropdown" ngbDropdownMenu>
