Add option for role USER to display #currentUser

--- a/src/app/login-basic/login-navbar.component.html
+++ b/src/app/login-basic/login-navbar.component.html
@@ -4,9 +4,11 @@
 </li>
 
 <li class="nav-item" *ngIf="isLoggedIn()" id="currentUser">
-  <a class="nav-link" *ngIf="isRole('admin')" [routerLink]="['/admin', getCurrentUser().id]">
+  <a class="nav-link" *ngIf="isRole('admin')" [routerLink]="['/admins', getCurrentUser().id]">
     <span class="fas fa-user-circle"></span> {{getCurrentUser().id}}</a>
-  <a class="nav-link" *ngIf="isRole('student')" [routerLink]="['/student', getCurrentUser().id]">
+  <a class="nav-link" *ngIf="isRole('student')" [routerLink]="['/students', getCurrentUser().id]">
+    <span class="fas fa-user-circle"></span> {{getCurrentUser().id}}</a>
+  <a class="nav-link" *ngIf="isRole('user')" [routerLink]="['/users', getCurrentUser().id]">
     <span class="fas fa-user-circle"></span> {{getCurrentUser().id}}</a>
 </li>
 
