--- a/src/app/rating/rating-create/rating-create.component.html
+++ b/src/app/rating/rating-create/rating-create.component.html
@@ -1,53 +1,49 @@
 <h1><b>Rating Component</b></h1>
 
 <form id="user-form" (ngSubmit)="onSubmit()" #form="ngForm">
-	<fieldset>
+  <fieldset>
 
-	  <div class="form-group mb-3">
-		<label class="control-label" for="name">Name*</label>
-		<input id="username" name="name" type="text" class="form-control" required>
-		<div class="invalid-feedback">A name is required</div>
-	  </div>
-
-
-	  <div class="form-group mb-3">
-		<label class="control-label" for="comment">Comment*</label>
-		<input id="comment" name="comment" type="comment" class="form-control" required email>
-		<div class="invalid-feedback">A comment is required</div>
-	  </div>
+    <div class="form-group mb-3">
+      <label class="control-label" for="comment">Comment*</label>
+      <input id="comment" name="comment" type="comment" class="form-control" required email>
+      <div class="invalid-feedback">A comment is required</div>
+    </div>
 
 
-	  <div class="form-group mb-3">
-		<label class="control-label" >Your rating</label>
-		<input id="ratingvalue"
-           value="0"
-           type="number"
-           class="rating"
-           min=0
-           max=5
-           step=0.5
-           data-size="xs"
-           #ratingvalue="ngModel" [(ngModel)]="rating.rating">
-		<div class="invalid-feedback">You must set a rating</div>
-	  </div>
+    <div class="form-group mb-3">
+      <label class="control-label">Your rating</label>
+      <input id="ratingvalue"
+             value="0"
+             type="number"
+             class="rating"
+             min=0
+             max=5
+             step=0.5
+             data-size="xs"
+             #ratingvalue="ngModel" [(ngModel)]="rating.rating">
+      <div class="invalid-feedback">You must set a rating</div>
+    </div>
 
 
-	  <!-- Button cancel Button submit -->
-	  <div class="form-group fa-pull-right">
-		<button id="listBtn" type="button" (click)="onCancel()"
-				class="btn btn-outline-primary pull-right">Back</button>
-		<button id="submit" type="submit" [disabled]="!form.form.valid"
-				class="btn ms-3 btn-success pull-right">Submit</button>
-	  </div>
+    <!-- Button cancel Button submit -->
+    <div class="form-group fa-pull-right">
+      <button id="listBtn" type="button" (click)="onCancel()"
+              class="btn btn-outline-primary pull-right">Back
+      </button>
+      <button id="submit" type="submit" [disabled]="!form.form.valid"
+              class="btn ms-3 btn-success pull-right">Submit
+      </button>
+    </div>
 
-	</fieldset>
-  </form>
+  </fieldset>
+</form>
 
+<br>
 <!--Footer-->
 <footer class="modal-footer">
-	<div class="container">
-		<div class="text-center">
-			<small>Footer...</small>
-		</div>
-	</div>
+  <div class="container">
+    <div class="text-center">
+      <small>Footer...</small>
+    </div>
+  </div>
 </footer>
