--- a/src/app/rating/rating-detail/rating-detail.component.html
+++ b/src/app/rating/rating-detail/rating-detail.component.html
@@ -15,5 +15,15 @@
         <p class="card-text">{{rating.comment}}</p>
       </div>
     </div>
+    <div>
+      <button id="editBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
+              class="btn m-1 btn-outline-success">Edit
+      </button>
+      <button id="deleteBtn" type="button" *ngIf="isRole('admin')"  [routerLink]="['delete']"
+              class="btn m-1 btn-outline-danger">Delete
+      </button>
+    </div>
+
+
   </div>
 </div>
