--- a/src/app/rating/rating-detail/rating-detail.component.html
+++ b/src/app/rating/rating-detail/rating-detail.component.html
@@ -16,6 +16,9 @@
       </div>
     </div>
     <div>
+      <button id="listBtn" type="button" [routerLink]="['/ratings']"
+              class="btn m-1 btn-outline-primary">Ratings List
+      </button>
       <button id="editBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
               class="btn m-1 btn-outline-success">Edit
       </button>
