Added degree listing to universities, improvement needed

--- a/src/app/university/university-detail/university-detail.component.html
+++ b/src/app/university/university-detail/university-detail.component.html
@@ -31,6 +31,6 @@
       </button>
     </div>
     <h6 class="card-title col-md-12 p-3"> {{university.name}} Degrees</h6>
-    <app-degree-list></app-degree-list>
+    <app-degree-list [university]="university.id"></app-degree-list>
   </div>
 </div>
