--- a/src/app/rating/rating-detail/rating-detail.component.html
+++ b/src/app/rating/rating-detail/rating-detail.component.html
@@ -4,7 +4,7 @@
     <div class="card-body row m-1">
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Author</h6>
-        <p class="card-text">{{rating.author.username}}</p>
+        <p class="card-text">{{rating.author.id}}</p>
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Score</h6>
@@ -19,10 +19,10 @@
       <button id="listBtn" type="button" [routerLink]="['/ratings']"
               class="btn m-1 btn-outline-primary">Ratings List
       </button>
-      <button id="editBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
+      <button id="editBtn" type="button" [routerLink]="['edit']"
               class="btn m-1 btn-outline-success">Edit
       </button>
-      <button id="deleteBtn" type="button" *ngIf="isRole('admin')"  [routerLink]="['delete']"
+      <button id="deleteBtn" type="button"  [routerLink]="['delete']"
               class="btn m-1 btn-outline-danger">Delete
       </button>
     </div>
