--- a/src/app/degree/degree-create/degree-create.component.html
+++ b/src/app/degree/degree-create/degree-create.component.html
@@ -17,9 +17,11 @@
 
     <!-- University input -->
     <div class="form-group mb-3">
-      <label class="control-label" for="university">University Name*</label>
-      <input id="university" name="university" type="university" class="form-control" required [(ngModel)]="degree.university" #university="ngModel">
-      <div class="invalid-feedback">A university is required</div>
+        <p class="control-label" >University*</p>
+        <select class="form-control" [(ngModel)]="universitySelected" required (change)="capture()">
+          <option disabled selected>Select one option</option>
+          <option *ngFor="let university of universities" [ngValue]="university.id">{{university.name}}</option>
+        </select>
     </div>
 
     <!-- Buttons -->
