fix delete and list

--- a/src/app/rating/rating-list/rating-list.component.html
+++ b/src/app/rating/rating-list/rating-list.component.html
@@ -11,12 +11,8 @@
         <p class="card-text">{{rating.rating}}</p>
       </div>
       <div class="col">
-        <h6 class="card-subtitle text-muted">Resource Rated</h6>
-        <p class="card-text">{{rating.resourceRated}}</p>
-      </div>
-      <div class="col">
         <h6 class="card-subtitle text-muted">Author</h6>
-        <p class="card-text">{{rating.author}}</p>
+        <p class="card-text">{{rating.author.id}}</p>
       </div>
     </div>
   </div>
