--- a/src/app/subject/subject-list/subject-list.component.html
+++ b/src/app/subject/subject-list/subject-list.component.html
@@ -3,7 +3,7 @@
     <div class="card-body row align-items-center">
       <div class="col">
         <h6 class="card-subtitle text-muted">Subject</h6>
-        <a class="card-text" [routerLink]="['subjects', subject.id]">{{subject.name}}</a>
+        <a class="card-text" [routerLink]="['/subjects', subject.id]">{{subject.name}}</a>
       </div>
       <div class="col">
         <h6 class="card-subtitle text-muted">Course</h6>
