--- a/src/app/degree/degree-detail/degree-detail.component.html
+++ b/src/app/degree/degree-detail/degree-detail.component.html
@@ -1,14 +1,14 @@
 <div class="card mb-4">
   <div class="card-block">
-    <h4 class="card-title col-md-12 p-3">{{degree.name}}</h4>
+    <h4 id="degreeName" class="card-title col-md-12 p-3">{{degree.name}}</h4>
     <div class="card-body row m-1">
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Faculty</h6>
-        <p class="card-text">{{degree.faculty}}</p>
+        <p id="degreeFaculty" class="card-text">{{degree.faculty}}</p>
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">University</h6>
-        <a class="card-text" [routerLink]="['../../universities', degree.university.id]">{{degree.university.name}}</a>
+        <a id="degreeUni" class="card-text" [routerLink]="['../../universities', degree.university.id]">{{degree.university.name}}</a>
       </div>
     </div>
     <div class="card-footer text-right">
