--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,11 +1,15 @@
 <h2><b>Uni</b>Cloud</h2>
 
 <div class="jumbotron">
-  <p>Description of the project...</p>
-  <p>Source code:</p>
+  <p>For Students who want to access different educational resources to help with their College studies
+    the project UniCloud is a educational resources sharing site
+    that allows students to search, rate, and share notes, tests or assignments.
+    Unlike other resource sharing sites, it is open-source.</p>
+  <p>Do you want to know how we coded? See this links: </p>
     <ul>
-      <li><a href="https://github.com/UdL-EPS-SoftArch/UniCloud-API" target="_blank">Spring Back-End</a></li>
-      <li><a href="https://github.com/UdL-EPS-SoftArch/UniCloud" target="_blank">Angular Front-End</a></li>
+      <a href="https://github.com/UdL-EPS-SoftArch/UniCloud-API" target="_blank">Spring Back-End</a>
+      <br>
+      <a href="https://github.com/UdL-EPS-SoftArch/UniCloud" target="_blank">Angular Front-End</a>
     </ul>
 </div>
 
@@ -13,7 +17,7 @@
 <footer class="modal-footer">
   <div class="container">
     <div class="text-center">
-      <small>Footer...</small>
+      <small>GEI-UDL 2022 ©. ALL RIGHTS RESERVED</small>
     </div>
   </div>
 </footer>
