Added initial main page search

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,7 +12,7 @@
       <a href="https://github.com/UdL-EPS-SoftArch/UniCloud" target="_blank">Angular Front-End</a>
     </ul>
 </div>
-
+<app-about-search></app-about-search>
 <!--Footer-->
 <footer class="modal-footer">
   <div class="container">
