--- a/src/app/about/about-search/about-search.component.html
+++ b/src/app/about/about-search/about-search.component.html
@@ -3,6 +3,10 @@
     <option value="{{type}}">{{type}}</option>
   </select>
   <input placeholder="Search item" type="text" class="form-control" [(ngModel)]="searchedValue"/>
-  <button id="submit"
-          class="btn ms-3 btn-success pull-right" (click)="onSubmit()">Submit</button>
+
+  <div class="card-footer text-right">
+    <button id="submit" type="button"
+            class="btn m-1 btn-outline-success" (click)="onSubmit()">Submit
+    </button>
+  </div>
 </div>
