Implemented search atm with some problems

--- a/src/app/degree/degree-list/degree-list.component.html
+++ b/src/app/degree/degree-list/degree-list.component.html
@@ -1,4 +1,4 @@
-<!--<app-degree-search [pageSize] = "pageSize" (emitResults)="modifyList($event)"></app-degree-search>-->
+<app-degree-search [pageSize] = "pageSize" (emitResults)="modifyList($event)"></app-degree-search>
 <div class="card mb-1" *ngFor="let degree of degrees">
   <div class="card-block row">
     <div class="card-body row align-items-center">
