--- a/src/app/degree/degree-search/degree-search.component.html
+++ b/src/app/degree/degree-search/degree-search.component.html
@@ -1,1 +1,4 @@
-<p>degree-search works!</p>
+<div class="col form-group">
+  <input placeholder="Search for any degree.." type="text" class="form-control" (keyup) = "write($event.target)"/>
+</div>
+
