Test create-degree finished

--- a/src/app/degree/degree-detail/degree-detail.component.html
+++ b/src/app/degree/degree-detail/degree-detail.component.html
@@ -17,7 +17,7 @@
       </button>
       <button id="editBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
               class="btn m-1 btn-outline-success">Edit
-      </button>
+      </button>cyp
       <button id="deleteBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['delete']"
               class="btn m-1 btn-outline-danger">Delete
       </button>
