--- a/src/app/student/student-detail/student-detail.component.html
+++ b/src/app/student/student-detail/student-detail.component.html
@@ -12,17 +12,17 @@
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Role</h6>
-        <p class="card-text">{{student.getRoles().join(', ')}}</p>
+        <!-- <p class="card-text">{{student.getRoles().join(', ')}}</p> -->
       </div>
     </div>
     <div class="card-footer text-right">
-      <button id="listBttn" type="button" [routerLink]="['/student']"
+      <button id="listBttn" type="button" (click)="goBack()"
               class="btn m-1 btn-outline-primary">Student List
       </button>
-      <button id="editBttn" type="button" *ngIf="isRole('admin') || isRole('student')" [routerLink]="['edit']"
+      <button id="editBttn" type="button" *ngIf="isRole('admin') || getCurrentUser().id === student.id" [routerLink]="['edit']"
               class="btn m-1 btn-outline-success">Edit
       </button>
-      <button id="deleteBttn" type="button" *ngIf="isRole('admin') || isRole('student')" [routerLink]="['delete']"
+      <button id="deleteBttn" type="button" *ngIf="isRole('admin') || getCurrentUser().id === student.id" [routerLink]="['delete']"
               class="btn m-1 btn-outline-danger">Delete
       </button>
     </div>
