--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -19,10 +19,10 @@
       <button id="listBtn" type="button" [routerLink]="['/users']"
               class="btn m-1 btn-outline-primary">User List
       </button>
-      <button id="editBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
+      <button id="editBtn" type="button" *ngIf="isRole('admin') || getCurrentUser().id === user.id" [routerLink]="['edit']"
               class="btn m-1 btn-outline-success">Edit
       </button>
-      <button id="deleteBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['delete']"
+      <button id="deleteBtn" type="button" *ngIf="isRole('admin') || getCurrentUser().id === user.id" [routerLink]="['delete']"
               class="btn m-1 btn-outline-danger">Delete
       </button>
     </div>
