Fixed minor error create degree button appearing on university details

--- a/src/app/degree/degree-list/degree-list.component.html
+++ b/src/app/degree/degree-list/degree-list.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 </div>
-<div class="card-footer text-right" *ngIf="isRole('admin')" >
+<div class="card-footer text-right" *ngIf="buttonShouldAppear() && isRole('admin')" >
   <button id="createBtn" type="button" [routerLink]="['create']"
           class="btn m-1 btn-outline-primary">Create Degree
   </button>
