--- a/src/app/admin/admin-edit/admin-edit.component.html
+++ b/src/app/admin/admin-edit/admin-edit.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="form-group fa-pull-right">
-      <button id="adminDetail" type="button" [routerLink]="['/admin/'+getCurrentUsername()]"
+      <button id="adminDetail" type="button" (click)="onCancel()"
               class="btn btn-outline-primary">Back</button>
       <button id="submit" type="submit" [disabled]="!form.form.valid"
               class="btn btn-success ms-3">Submit</button>
