Password reset implemented on both admin-edit and student-edit components

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
            aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>Users</a>
         <div class="dropdown-menu" aria-labelledby="playDropdown" ngbDropdownMenu>
           <a class="dropdown-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{ exact: true }"
-             [routerLink]="['/users']"><span class="fas fa-user-circle"></span> List Users</a>
+             [routerLink]="['/admins']"><span class="fas fa-user-circle"></span> List Users</a>
         </div>
       </li>
       <li class="nav-item" *ngIf="isStudent()" ngbDropdown>
