--- a/src/app/admin/admin-detail/admin-detail.component.html
+++ b/src/app/admin/admin-detail/admin-detail.component.html
@@ -19,10 +19,10 @@
         <button id="listBttn" type="button" (click)="goBack()"
               class="btn m-1 btn-outline-primary">Admin List
       </button>
-      <button id="editBttn" type="button" *ngIf="getCurrentUser().id === admin.id" [routerLink]="['edit']"
+      <button id="editBttn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
               class="btn m-1 btn-outline-success">Edit
       </button>
-      <button id="deleteBttn" type="button" *ngIf="getCurrentUser().id === admin.id" [routerLink]="['delete']"
+      <button id="deleteBttn" type="button" *ngIf="isRole('admin')" [routerLink]="['delete']"
               class="btn m-1 btn-outline-danger">Delete
       </button>
     </div>
