--- a/src/app/admin/admin-list/admin-list.component.html
+++ b/src/app/admin/admin-list/admin-list.component.html
@@ -5,7 +5,7 @@
     <div class="card-body row align-items-center">
       <div class="col-6 mt-1">
         <h6 class="card-subtitle text-muted">Username</h6>
-        <a class="card-text" [routerLink]="['/admin', admin.id]">{{admin.id}}</a>
+        <a class="card-text" [routerLink]="['/admins', admin.id]">{{admin.id}}</a>
       </div>
       <div class="col-6 mt-1">
         <h6 class="card-subtitle text-muted">E-mail</h6>
